<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<!-- Adjust group id for anonymous projects -->
    <groupId>org.variantsync.vevos</groupId>
	<!-- Adjust the generateVariant name -->
    <artifactId>simulation</artifactId>
    <version>2.0.0</version>

    <properties>
        <!-- Adjust your java version here -->
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <junit.jupiter.version>5.6.0</junit.jupiter.version>
    </properties>

    <repositories>
        <repository>
            <id>repo</id>
            <url>file://${project.basedir}/repo</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
<!--        Local dependencies-->
        <dependency>
            <groupId>org.variantsync</groupId>
            <artifactId>functjonal</artifactId>
            <version>1.0.1</version>
        </dependency>

        <dependency>
            <groupId>de.ovgu</groupId>
            <artifactId>featureide.lib.fm</artifactId>
            <version>3.8.1</version>
        </dependency>

        <dependency>
            <groupId>org.sat4j</groupId>
            <artifactId>core</artifactId>
            <version>2.3.5</version>
        </dependency>

        <dependency>
            <groupId>net.ssehub</groupId>
            <artifactId>kernel_haven</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>net.ssehub.kernelhaven</groupId>
            <artifactId>kconfigreader</artifactId>
            <version>1.0.0</version>
        </dependency>
<!--        -->

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit</artifactId>
            <version>6.6.0.202305301015-r</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>net.lingala.zip4j</groupId>
            <artifactId>zip4j</artifactId>
            <version>2.11.3</version>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-impl</artifactId>
            <version>2.6.1</version>
        </dependency>
    </dependencies>
</project>
